// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Versioning should get lowest target versions 1`] = `
[
  {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 26,
    "target": "samsung",
    "version": "26",
  },
  {
    "parsedVersion": 26,
    "target": "safari",
    "version": "26.0",
  },
  {
    "parsedVersion": 122,
    "target": "opera",
    "version": "122",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.5,
    "target": "ios_saf",
    "version": "18.5-18.7",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 128,
    "target": "firefox",
    "version": "128",
  },
  {
    "parsedVersion": 142,
    "target": "edge",
    "version": "142",
  },
  {
    "parsedVersion": 112,
    "target": "chrome",
    "version": "112",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.52,
    "target": "baidu",
    "version": "13.52",
  },
  {
    "parsedVersion": 145,
    "target": "android",
    "version": "145",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 147,
    "target": "and_ff",
    "version": "147",
  },
  {
    "parsedVersion": 145,
    "target": "and_chr",
    "version": "145",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
[
  {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
[
  {
    "parsedVersion": 28,
    "target": "samsung",
    "version": "28",
  },
  {
    "parsedVersion": 26.2,
    "target": "safari",
    "version": "26.2",
  },
  {
    "parsedVersion": 124,
    "target": "opera",
    "version": "124",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.5,
    "target": "ios_saf",
    "version": "18.5-18.7",
  },
  {
    "parsedVersion": 128,
    "target": "firefox",
    "version": "128",
  },
  {
    "parsedVersion": 143,
    "target": "edge",
    "version": "143",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 145,
    "target": "android",
    "version": "145",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 147,
    "target": "and_ff",
    "version": "147",
  },
  {
    "parsedVersion": 145,
    "target": "and_chr",
    "version": "145",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 26,
    "target": "samsung",
    "version": "26",
  },
  {
    "parsedVersion": 26,
    "target": "safari",
    "version": "26.0",
  },
  {
    "parsedVersion": 122,
    "target": "opera",
    "version": "122",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.5,
    "target": "ios_saf",
    "version": "18.5-18.7",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 128,
    "target": "firefox",
    "version": "128",
  },
  {
    "parsedVersion": 142,
    "target": "edge",
    "version": "142",
  },
  {
    "parsedVersion": 112,
    "target": "chrome",
    "version": "112",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.52,
    "target": "baidu",
    "version": "13.52",
  },
  {
    "parsedVersion": 145,
    "target": "android",
    "version": "145",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 147,
    "target": "and_ff",
    "version": "147",
  },
  {
    "parsedVersion": 145,
    "target": "and_chr",
    "version": "145",
  },
]
`;

exports[`Versioning should support string config in rule option 1`] = `
[
  {
    "parsedVersion": 28,
    "target": "samsung",
    "version": "28",
  },
  {
    "parsedVersion": 26.2,
    "target": "safari",
    "version": "26.2",
  },
  {
    "parsedVersion": 124,
    "target": "opera",
    "version": "124",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.5,
    "target": "ios_saf",
    "version": "18.5-18.7",
  },
  {
    "parsedVersion": 128,
    "target": "firefox",
    "version": "128",
  },
  {
    "parsedVersion": 143,
    "target": "edge",
    "version": "143",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 145,
    "target": "android",
    "version": "145",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 147,
    "target": "and_ff",
    "version": "147",
  },
  {
    "parsedVersion": 145,
    "target": "and_chr",
    "version": "145",
  },
]
`;
